Initial SQL commit

--- a/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -88,5 +88,14 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Sql\Schemas\Movie.sql" />
+    <Content Include="Sql\Tables\Movie.PersonalRatings.sql" />
+    <Content Include="Sql\Tables\Movie.Users.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sql\Data\" />
+    <Folder Include="Sql\Procedures\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
