--- a/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -59,6 +59,12 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Genres.cs" />
+    <Compile Include="Models\Movies.cs" />
+    <Compile Include="Models\People.cs" />
+    <Compile Include="Models\PersonalRatings.cs" />
+    <Compile Include="Models\Roles.cs" />
+    <Compile Include="Models\Studios.cs" />
+    <Compile Include="Models\Users.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ActionSelector.resx">
@@ -92,6 +98,7 @@
   <ItemGroup>
     <Content Include="Sql\Data\Movie.Genres.sql" />
     <Content Include="Sql\Schemas\Movie.sql" />
+    <Content Include="Sql\Tables\DropTables.sql" />
     <Content Include="Sql\Tables\Movie.Genres.sql" />
     <Content Include="Sql\Tables\Movie.Movies.sql" />
     <Content Include="Sql\Tables\Movie.People.sql" />
