--- a/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/UserApp/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -156,6 +156,7 @@
     <Content Include="Sql\Data\Movie.Genres.sql" />
     <Content Include="Sql\Data\Movie.Movies.sql" />
     <Content Include="Sql\Data\Movie.People.sql" />
+    <Content Include="Sql\Data\Movie.PersonalRatings.sql" />
     <Content Include="Sql\Data\Movie.Roles.sql" />
     <Content Include="Sql\Data\Movie.Studios.sql" />
     <Content Include="Sql\Data\Movie.Users.sql" />
